--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col min-h-screen font-inter bg-white text-slate-700">
+<div class="flex flex-col min-h-screen min-w-[360px] font-inter bg-white text-slate-700">
 
   <!-- Navbar -->
   <app-navbar
