listado de mecanicos, listado de vehiculos , listado de marcas de vehiculo y listado de estados de vehiculos. se ha personalizado el sidebar a listados reales de la app. ademas se ha trabajado el componente notFound

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,8 @@
 
       <!-- Main content -->
       <main class="flex-1">
-        <app-content></app-content>
+        <app-content>
+        </app-content>
       </main>
 
     </div>
