--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   <div class="flex justify-between items-center w-full max-w-[1280px] mx-auto">
     
     <!-- Logo -->
-    <div class="text-sm font-semibold">AutoControl ERP</div>
+    <div class="text-lg font-semibold">AutoControl</div>
 
     <!-- Desktop: input de búsqueda + iconos -->
     <div class="hidden md:flex items-center ml-auto">
