--- a/src/app/shared/components/content/content.component.html
+++ b/src/app/shared/components/content/content.component.html
@@ -1,6 +1,5 @@
 <main class="flex-1 bg-red p-6 bg-red">
   <div class="max-w-7xl mx-auto">
-    <h1 class="text-xl font-semibold text-slate-800">Bienvenido a AutoControl ERP</h1>
-    <p class="mt-2 text-slate-600">Aquí va el contenido principal de la aplicación.</p>
+<router-outlet></router-outlet>
   </div>
 </main>
